# app_controle_veiculos

./: README.md  alembic.ini  pyproject.toml
apps/front-end/public/: index.html
apps/front-end/src/: index.js
apps/front-end/src/services/: authServices.js
apps/front-end/src/styles/: index.css  login.css
apps/front-end/src/templates/: login-page.html  user-page.html
apps/public/static/: main.js
apps/public/styles/: styles.css
apps/public/templates/: login-page.html  user-page.html
apps/src/: schema.py  server.py
apps/src/infra/providers/: hash_providers.py  token_providers.py
apps/src/infra/sqlalchemy/config/: database.py
apps/src/infra/sqlalchemy/crud/: crud_controle_km.py  crud_users.py
apps/src/infra/sqlalchemy/models/: model.py
apps/src/router/: routers_auth.py  routers_controle_km.py  routers_user.py  routers_utils.py
migrations/: env.py
migrations/versions/: 0a44533c83e7_added_columns_in_controle_for_condutor.py  69afdebdbc5b_alter_table_users.py  9a1a0d7aff05_added_columns_in_controle.py  be9a6155680f_adicionar_tabela_controle_km.py  c4538140cbbd_added_account_table.py
tests/: conftest.py  test_client.py  test_crud.py  test_database.py  test_providers.py  test_schemas.py
